# 2-oji-uzd-class

./: .gitignore  CMakeLists.txt  README.md  calculations.cpp  fileHeader.h  file_generation.cpp  file_output.cpp  file_read.cpp  header.h  main.cpp  main_header.h  makefile  process_files.cpp  sort.cpp  student_division.cpp  student_division_1.cpp  studentas.cpp  studentas.h  test.cpp
Program_Setup/: Program_Setup.vdproj
Program_Setup/Release/: Program_Setup.msi
html/: _r_e_a_d_m_e_8md.html  annotated.html  calculations_8cpp.html  class_person-members.html  class_person.html  class_studentas-members.html  class_studentas.html  classes.html  file__generation_8cpp.html  file__output_8cpp.html  file__read_8cpp.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  main_8cpp.html  main__header_8h.html  main__header_8h_source.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  sort_8cpp.html  student__division_8cpp.html  studentas_8cpp.html  studentas_8h.html  studentas_8h_source.html  test_8cpp.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+6 more)
test/: CMakeLists.txt  unitTest.cpp
